# selenium-remote

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
selenium_remote/: main.py
tests/: test_main.py
