[tool.poetry]
name = "selenium-remote"
version = "0.1.0"
description = "A package for halding and using a selenium grid server."
authors = ["George Pamfilis <gpamfilis@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_remote"}]

[tool.poetry.dependencies]
python = "^3.11"
fake-useragent = "^1.1.3"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
